cambios al proyecto

--- a/Compromisos.tex
+++ b/Compromisos.tex
@@ -5,7 +5,7 @@ Se asume los siguientes compromisos:
 
 \begin{itemize}
 
-\item Por lo menos dos artículos en revista internacional indexada
+\item Por lo menos tres artículos en revista internacional indexada
   A1.
 
 \item Ponencia en evento internacional donde se presentaran los resultados de le
