--- a/Estudiantes.tex
+++ b/Estudiantes.tex
@@ -1,4 +1,4 @@
-\section{ Funciones de los Estudiantes Formación }
+\section{ Funciones de los Estudiantes en Formación }
 
 
 
@@ -8,9 +8,9 @@ Además de participar en todos los pasos del desarrollo de la
 investigación, los estudiantes  tendrán las siguientes
 tareas especificas.
 
-Tareas específicas  estudiante de doctorado:
+Tareas específicas estudiante de doctorado:
 \begin{itemize}
-\item Determinar los perfiles de background para electrones, positrones, antiprotones y rayos gamma
+\item Determinar los perfiles de background para electrones, positrones, antiprotones y rayos gamma.
 \item Elaborar los programas en \texttt{Pythia} para calculo del flujo de electrones, positrones, antiprotones y rayos gamma
 \item Establecer las regiones de tiempo de vida media y masa del neutralino excluidas para los modelos bajo consideración
 \item Elaborar un borrador con los principales resultados
@@ -18,8 +18,8 @@ Tareas específicas  estudiante de doctorado:
 
 Tareas específicas del estudiante de maestría:
 \begin{itemize}
-\item Establecer los diferentes conjuntos de parámetros $\lambda''$ para valores diferentes del la carga $H$ de los operadores correspondientes. En caso de que alguno de ellos resulte con carga $n$ negativa, calcular el acoplamiento diferente de cero que surge después de hacer la rotación del potencial de K\"ahler
-\item Encontrar la carga fraccionaria óptima del nuevo flavón para explicar las masas y mezclas de los neutrinos a través del mecanismo seesaw en el modelo estándar supersimétrico son la simetría anómala $U(1)_H$ y violación de número bariónico a través de términos trilineales $\lambda''$
+\item Establecer los diferentes conjuntos de parámetros $\lambda$ para valores diferentes del la carga $H$ de los operadores correspondientes. En caso de que alguno de ellos resulte con carga $n$ negativa, calcular el acoplamiento diferente de cero que surge después de hacer la rotación del potencial de K\"ahler
+\item Encontrar la carga fraccionaria óptima de los nuevos flavones para explicar las masas y mezclas de los neutrinos a través del mecanismo seesaw en el modelo estándar supersimétrico con la simetría anómala $U(1)_H$ y violación de número leptónico a través de términos trilineales $\lambda$
 \item Elaborar un borrador con los principales resultados
 \end{itemize}
 
