--- a/Resultados.tex
+++ b/Resultados.tex
@@ -1,12 +1,23 @@
 \section{ Resultados Esperados }
 
-Se espera que los resultados de está investigación clarifiquen hasta que punto se pueden acotar los valores de los parámetros trilineales que violan $R$--paridad en el caso de que las anomalías actuales en rayos cósmicos puedan ser explicadas por fuentes astrofísicas, como por ejemplo pulsares cercanos \cite[y referencias internas]{Chowdhury:2009jd}. Se espera mejorar las cotas existentes \cite{Barbieri:1988mw,Berezinsky:1991sp,Diwan:1996gw,Berezinsky:1996pb,Baltz:1997ar,Gupta:2004dz,Huber:2005iz} en varios ordenes de magnitud. También esperamos obtener señales específicas que se puedan contrastar con los resultados experimentales de rayos gamma que se esperan en los próximos meses.
-%En particular del flujo de rayos gamma que se espera para un neutralino decayendo a $\tau^\pm\,\mu^\mp\,\nu_e$ a través de un acoplamiento trilineal del tipo $\lambda_{123}$, o de un neutralino decayendo hadrónicamente a través de acoplamientos $\lambda''$.
-Así mismo se espera determinar el rango de tiempos de vida y media del neutralino como materia oscura inestable que se podrá excluir en experimentos futuros como el AMS-02 \cite{ams:2009}
+Determinación de la factibilidad del LHC para determinar las correlaciones de VBPR entre el cociente de branchings de neutralino a W mu y W tau con el ángulo de mezcla atmosférico de neutrinos, así como de la correlación entre la longitud de decaimiento del neutralino y la diferencia de masa al cuadrado atmosférica.
 
-De otro lado, esperamos construir el primer modelo estándar supersimétrico con una simetría horizontal anómala $U(1)_H$ que se pueda constrastar directamente con resultados experimentales de aceleradores. Así mismo como formular el primer modelo con violación de número bariónico a través de términos $\lambda''$ que a la vez de cuenta de las masas y mezclas de neutrinos.
+Determinación del flujo de rayos gamas y su confrontación con lo observado en experimentos de rayos cósmicos en modelos supersimétricos donde el gravitino es el CMOI con masa de hasta 80 GeV. 
 
-En conclusión esperemos obtener predicciones específicas para modelos supersimétricos con contenido mínimo de partículas y una simetría horizontal anómala $U(1)_H$ que puedan comprobarse directamente en experimentos de rayos cósmicos o de aceleradores de partículas
+Determinación de acoplamientos, vida media y masa del gravitino como CMOI en modelos de ruptura trilineal de paridad R (RTPR) con violación de número leptónico, que pueda explicar el exceso de positrones en rayos cósmicos. Predicciones de flujo de positrones y rayos gama del modelo para experimentos futuros de rayos cósmicos. 
+
+Determinación de las restricciones que los diferentes experimentos de rayos cósmicos 
+presentes y futuros que se imponen sobre el neutralino como CMOI. 
+
+Determinación de las señales en el LHC para 1) Modelos de RTPR con violación de número bariónico y mecanismo see-saw para masas de neutrinos, inducida por una simetría Abeliana anómala U(1). 2) Regiones del espacio de parámetros compatible con física de neutrinos y densidad de materia oscura del seesaw radiativo. 3) Modelos 3-3-1 con cuatro familias
+
+ Obtener algunos canales visibles que involucren materia oscura en el LHC, y predecir el flujo de rayos gamma en la galaxia producto de la aniquilacion de materia oscura.
+
+De otro lado, esperamos construir el primer modelo estándar supersimétrico con una simetría horizontal anómala $U(1)_H$ que se pueda constrastar directamente con resultados experimentales de aceleradores. Así mismo como formular el primer modelo con violación de número leptónico a través de términos $\lambda$ que a la vez de cuenta de las masas y mezclas de neutrinos.
+
+En conclusión esperemos obtener predicciones específicas para modelos supersimétricos con contenido mínimo de partículas y una simetría horizontal anómala $U(1)_H$ que puedan comprobarse directamente en experimentos de rayos cósmicos o de aceleradores de partículas.
+
+Formación 1 estudiante de maestría y 1 de doctorado.
 
 
 %%% Local Variables: 
