--- a/Metodologia.tex
+++ b/Metodologia.tex
@@ -4,7 +4,7 @@ Los elementos teóricos fundamentales del proyecto que queremos desarrollar
 son los siguientes:
 
 \begin{enumerate}
-\item Se asume supersimetría,   y una simetría Abeliana de sabor $U(1)_H$ con un sólo flavón, $\Phi$, de carga $H$ $-1$.
+\item Se asume supersimetría, y una simetría Abeliana de sabor $U(1)_H$ con uno ó varios flavones de cargas $H$.
 
 \item Para un determinado término del superpotencial (\ref{eq:5}) con carga horizontal $n$ tenemos que, para $\theta=\langle\Phi\rangle$
   \begin{enumerate}
@@ -14,14 +14,18 @@ son los siguientes:
   \end{enumerate}
 Usando estás posibilidades debemos fijar las cargas $H$ libres para obtener el modelo supersimétrico con las propiedades adecuadas. Las condiciones para obtener modelos con solo términos trilineales de ruptura de paridad $R$ con violación de número leptónico ya han sido establecidas en \cite{Sierra:2009zq}.
 
-En este proyecto debemos establecer las condiciones para obtener modelos con únicamente acoplamientos de $\lambda''$. En el caso de $n<0$ nos interesa analizar las restricciones que los experimentos sobre rayos cósmicos actuales y futuros imponen sobre dicho modelo, mientras que en el caso en que los operadores con acoplamientos $\lambda''$ tengan cargas con $n\ge 0$, nos interesa explorar las predicciones que dicho modelo tenga para el LHC.
+ En el caso de $n<0$ nos interesa analizar las restricciones que los experimentos sobre rayos cósmicos actuales y futuros imponen sobre dicho modelo, mientras que en el caso en que los operadores con acoplamientos $\lambda$ tengan cargas con $n\ge 0$, nos interesa explorar las predicciones que dicho modelo tenga para el LHC.
 \end{enumerate}
 
-Para el caso de modelos con un candidato a materia oscura inestable la metodología es la siguiente:
-En este escenario, asumiremos que el flujo de positrones y rayos gamma astrofísicos constituirían un nuevo background para las posibles señales de detección de materia oscura \cite{Choi:2009qc}. En colaboración con el Dr. Carlos Yaguna, uno de los autores de la referencia anterior, se compararán los perfiles de dicho background  con las simulaciones hechas en \texttt{Pythia} \cite{Sjostrand:2006za} del flujo rayos cósmicos para modelos con ruptura trilineal de $R$--paridad donde los neutralinos son candidatos de materia oscura inestable. A partir de los flujos que superen de forma significativa el nuevo background se obtendrán las regiones de exclusión del  tiempo de vida media, y de masa para la partícula de materia oscura. Con el nuevo background  astrofísico, y con una metodología similar a la usada en \cite{Choi:2009qc} para  el caso de aniquilación de materia oscura, también se estudiará la posibilidad de detectar positrones que se originen a partir de materia oscura inestable, en futuros experimentos de medidas de flujos de positrones tales como el experimento AMS-02~\cite{ams:2009}. AMS-02 tomará datos durante tres años y espera medir el espectro de positrones hasta los $300\,$GeV. De esta comparación esperamos obtener el rango de tiempos de vida media y masas que se podrán explorar en AMS-02, para modelos con materia oscura inestable.
+Para un modelo que incluya mecanismos de generación radiativa de masas de neutrinos se determina el espacio de parámetros compatible con los datos experimentales sobre física de neutrinos, se calculan los branchings de decaimiento y las secciones eficaces y se establecen correlaciones entre estos observables y los datos de física de neutrinos [7]. Para el caso de VBPR todo esto ya ha sido implementado en el programa computacional SPheno [8]. Finalmente se hace una simulación con PYTHIA [9] de la factibilidad de descubrir el modelo en aceleradores, como hemos venido haciendo con VBPR en [1], y de la viabilidad de medir las correlaciones establecidas, que es uno de los objetivos del proyecto.
 
+Como hemos ya hecho en [3], obtendremos resultados numéricos para los flujos de rayos cósmicos  producidos en el decaimiento del CMOI usando PYTHIA. A partir de los resultados se analizará el tiempo de vida del CMOI  en términos de su masa con el fin de obtener y analizar cuáles serían las regiones del espacio de parámetros restringidas o excluidas por los experimentos de rayos cósmicos.
 
-Para el caso de modelos con ruptura de paridad $R$ del tipo $\lambda''$ y carga $n\ge 0$ debemos encontrar una forma analítica que nos permita predecir el tamaño de los acoplamientos, y entonces establecer observables para el LHC que sean independientes del valor específico de $n$ y que nos permitan hacer predicciones que sean compatibles con las hipótesis de la simetría horizontal usada. Así mismo deberemos determinar la carga fraccionaria más óptima de un nuevo flavón que nos permita explicar de la mejor forma posible los resultados experimentales de oscilaciones de neutrinos.
+En este proyecto haremos una implementación del modelo de seesaw radiativo en Micromegas  con el cual se pueden hacer los cálculos de densidad de reliquia, secciones eficaces, amplitudes de decaimiento, etc. Una vez establecidas las regiones del espacio de parámetros relevantes, se procederá con el método para mecanismos de generación radiativa de masas de neutrinos descrito anteriormente.
+
+El modelo de seesaw raditivo se estudiara a traves del paquete computacinal micrOMEGAs, con el cual se hacen actualmente a nivel mundial los calculos de densidad de reliquia, secciones eficaces, amplitudes de decaimiento, entre otros en modelos genéricos que pretendan tener canddatos para materia oscura. Además, desarrollaremos scripts que nos permitan hacer el estudio del comportamiento del sector de neutrinos del modelo, para poder compararlo con las observaciones.
+
+Para el caso de modelos con ruptura de paridad $R$ del tipo $\lambda$ y carga $n\ge 0$ debemos encontrar una forma analítica que nos permita predecir el tamaño de los acoplamientos, y entonces establecer observables para el LHC que sean independientes del valor específico de $n$ y que nos permitan hacer predicciones que sean compatibles con las hipótesis de la simetría horizontal usada. Así mismo deberemos determinar la carga fraccionaria más óptima de los nuevos flavones que nos permita explicar de la mejor forma posible los resultados experimentales de oscilaciones de neutrinos.
 
 
 %%% Local Variables: 
