--- a/Planteamiento_del_Problema.tex
+++ b/Planteamiento_del_Problema.tex
@@ -1,6 +1,19 @@
 \section{ Planteamiento del Problema }
+\begin{instrucciones}
+  CODI: ¿Está bien definido el problema que se quiere investigar? ¿Es clara su justificación desde el punto de vista académico, científico, tecnológico, social, económico y legal? (15)
+
+  COLCI: en este ítem usted deberá describir de forma precisa y completa la
+  naturaleza y magnitud del problema de investigación que se quiere
+  abordar. Formule claramente las preguntas concretas a las cuales se
+  quiere responder en el contexto del problema planteado.
+\end{instrucciones}
+
+
 
 \subsection{Marco teórico}
+\begin{instrucciones}
+ CODI: ¿Es la teoría actualizada y acertada con respecto al problema que se va a estudiar? ¿Su formulación es coherente? ¿Es clara la perspectiva teórica desde donde se ubica el problema?
+\end{instrucciones}
 
 Con la entrada en operación del LHC, se espera descubrir señales de materia oscura y de modelos que tengan algún mecanismo radiactivo para generar masas de neutrinos.
 Por otro lado, los recientes datos reportados por las colaboraciones PAMELA y Fermi han impuesto restricciones muy fuertes sobre el flujo de rayos cósmicos provenientes de partículas de materia oscura. Los futuros experimentos de rayos cósmicos, tales como el experimento AMS-02, Planck, IceCube, etc, esperan mejorar la sensibilidad a este tipo de señales. Así mismo, los experimentos de detección directa de materia oscura como DAMA, CDMS, CoGeNT, XENON han creado grandes expectativas por los resultados presentes y los que se esperan obtener en los próximos meses. Los experimentos de física de neutrinos y de radiación cósmica de fondo han entrado ya en una era de medidas de precisión.
@@ -68,9 +81,11 @@ desintegración del neutralino que podrían ser detectados en el LHC o tevatrón
 Finalmente, otras preguntas que proponemos y que se trataran de responder en el proyecto son: ¿Cuáles serían las restricciones 
 impuestas por los recientes y futuros datos astrofísicos y de aceleradores sobre los modelos supersimétricos con violación de paridad R extendidos con una simetría $U(1)_H$ que presentan un neutralino inestable? Y ¿Cuáles serían las restricciones impuestas por los recientes y futuros datos de todos estos experimentos sobre  modelos que presenten una partícula candidata a materia oscura o que generen masas para los neutrinos?
 
-
+\textbf{Comentar sobre la linea de rayos gamma \cite{1011.3786}}
 \subsection{Planteamiento del problema}
-
+\begin{instrucciones}
+  ¿Están vinculados con el problema planteado? ¿Son viables, claros, concretos y factibles, de acuerdo con el estudio y los métodos?
+\end{instrucciones}
 
 En el caso de modelos supersimétricos basados en una simetría de sabor anómala $U(1)_H$, con un solo flavón de carga $-1$, una vez se introducen las condiciones teóricas y fenomenológicas, la solución más óptima se puede expresar en términos de 4 cargas $H$ libres que se puede usar para explicar el valor de los 45 parámetros del superpotencial que violan $R$--paridad \cite{Mira:2000gg,Dreiner:2003hw,Dreiner:2003yr,Dreiner:2007vp,Dreiner:2006xw,Sierra:2009zq}. 
 \begin{equation}
@@ -104,6 +119,10 @@ En el caso \ref{item:3}, en este proyecto pretendemos investigar posibles predic
 esperamos tener una predicción muy concreta para la jerarquía en los acoplamientos $\lambda$, la cual podría dar lugar a señales muy específicas en el LHC. De este modo, en caso de que se descubriera en el LHC un modelo de ruptura de $R$--paridad a través términos $\lambda$, se podría determinar si la simetría Abeliana  $U(1)_H$ con uno ó más flavones es la simetría que explica la jerarquía en la masas de los fermiones.
 
 En el modelo usual para violación de número leptónico a través de términos $\lambda$, donde se impone una simetría discreta del tipo paridad leptónica, los términos no renormalizables asociados a la masa del neutrino quedan prohibidos, por lo que el mecanismo seesaw no puede ser implementado. En el caso de que la simetría horizontal se use para formular un modelo de este tipo, se puede introducir un nuevo flavón con carga $H$ fraccionaria [del tipo usado en \cite{Chen:2008tc}] que puede dar lugar a un mecanismo de seesaw apropiado para explicar los datos de oscilaciones de neutrinos. En este proyecto pretendemos explorar la posibilidad de obtener una ttextura para las masa de los neutrinos en base a un modelo supersimétrico a la Froggatt-Nielsen, y además obtener un candidato consistente para materia oscura.
+
+\begin{ideas}
+  Material adicional
+\end{ideas}
 
 
 %%% Local Variables: 
