--- a/Planteamiento_del_Problema.tex
+++ b/Planteamiento_del_Problema.tex
@@ -1,6 +1,6 @@
 \section{ Planteamiento del Problema }
 \begin{instrucciones}
-  CODI: ¿Está bien definido el problema que se quiere investigar? ¿Es clara su justificación desde el punto de vista académico, científico, tecnológico, social, económico y legal? (15)
+  CODI: ¿Está bien definido el problema que se quiere investigar? ¿Es clara su justificación desde el punto de vista académico, científico, tecnológico, social, económico y legal? (15).
 
   COLCI: en este ítem usted deberá describir de forma precisa y completa la
   naturaleza y magnitud del problema de investigación que se quiere
